Fix padding of categories list (top was not visible)

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 .error_msg{color:red;}
 .error{border-color:red;border-width:2px;}
 #tasks_lists div{position:relative;padding:0.5em 1em;}
+#tasks_lists { padding-top: 2.8em; }
 #tasks_lists .active{font-weight:bold;}
 #tasks_list h1{background-color:#1D2D44;color:white;font-size:120%;padding:0 0.5em;}
 
